--- a/src/main/resources/register.fxml
+++ b/src/main/resources/register.fxml
@@ -1,33 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center" hgap="10" prefHeight="400" prefWidth="600"
-          vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal"
-          fx:controller="org.loose.fis.registration.example.controllers.RegistrationController">
+<?import javafx.scene.text.*?>
+
+<GridPane alignment="center" hgap="10" prefHeight="400" prefWidth="600" vgap="10" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.registration.example.controllers.RegistrationController">
     <padding>
-        <Insets bottom="25.0" left="25.0" right="25.0" top="25.0"/>
+        <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
     </padding>
-    <Text id="title-text" text="FIS - Student Manager" GridPane.columnIndex="0" GridPane.columnSpan="2"
-          GridPane.rowIndex="0"/>
+   <ImageView fitHeight="275.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" scaleX="3.0" scaleY="3.0" scaleZ="3.0" translateX="250.0" translateY="200.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+      <image>
+         <Image url="@background.jpg" />
+      </image>
+      <viewport>
+         <Rectangle2D height="1080.0" width="1920.0" />
+      </viewport>
+      <cursor>
+         <Cursor fx:constant="DEFAULT" />
+      </cursor>
+      <GridPane.margin>
+         <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
+      </GridPane.margin></ImageView>
+   <Label text="WELCOME TO SNAKE BANK!" textFill="WHITE" translateX="80.0" translateY="-50.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+    <Text id="title-text" fill="WHITE" text="FIS - Student Manager" GridPane.columnIndex="0" GridPane.rowIndex="0" />
 
-    <Label text="Username:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+    <Label text="Username:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1" />
 
-    <TextField fx:id="usernameField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+    <TextField fx:id="usernameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-    <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+    <Label text="Password:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2" />
 
-    <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+    <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-    <Label text="Role:" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+    <Label text="Role:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3" />
 
     <ChoiceBox fx:id="role" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
     </ChoiceBox>
 
-    <Text fx:id="registrationMessage" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
+    <Text fx:id="registrationMessage" GridPane.columnIndex="1" GridPane.rowIndex="7" />
     <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="5">
-        <Button onAction="#handleRegisterAction" text="Register"/>
+        <Button onAction="#handleRegisterAction" text="Register" />
     </HBox>
+   <columnConstraints>
+      <ColumnConstraints />
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
 </GridPane>
