--- a/src/main/resources/game/game.fxml
+++ b/src/main/resources/game/game.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="anchorPane" minHeight="-Infinity" minWidth="-Infinity"  prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.game.Controller">
+<AnchorPane fx:id="anchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.game.Controller">
    <GridPane alignment="CENTER" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-image: url(game/background2.jpg);" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
      <columnConstraints>
        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -19,7 +19,7 @@
        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
      </rowConstraints>
       <children>
-         <Button mnemonicParsing="false"  prefHeight="99.0" prefWidth="120.0" style="-fx-background-color: transparent;" GridPane.valignment="TOP">
+         <Button mnemonicParsing="false" prefHeight="99.0" prefWidth="120.0" style="-fx-background-color: transparent;" GridPane.valignment="TOP">
             <graphic>
                <ImageView fitHeight="91.0" fitWidth="52.0" pickOnBounds="true" preserveRatio="true">
                   <image>
@@ -35,17 +35,17 @@
                <Insets top="15.0" />
             </GridPane.margin>
          </Label>
-         <Button mnemonicParsing="false"  prefHeight="89.0" prefWidth="102.0" style="-fx-background-color: transparent; -fx-background-radius: 900; -fx-border-color: transparent; -fx-border-radius: 900; -fx-shape: Circle;" text="ⓘ" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
+         <Button mnemonicParsing="false" prefHeight="89.0" prefWidth="102.0" style="-fx-background-color: transparent; -fx-background-radius: 900; -fx-border-color: transparent; -fx-border-radius: 900; -fx-shape: Circle;" text="ⓘ" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
             <font>
                <Font size="34.0" />
             </font>
          </Button>
-          <Button fx:id="startButton" alignment="CENTER" contentDisplay="CENTER" maxHeight="50.0" maxWidth="180.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"  prefHeight="50.0" prefWidth="180.0" style="-fx-background-color: white; -fx-background-radius: 100; -fx-border-color: black; -fx-border-radius: 100;" text="Start Game" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+          <Button fx:id="startButton" alignment="CENTER" contentDisplay="CENTER" maxHeight="50.0" maxWidth="180.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#start" prefHeight="50.0" prefWidth="180.0" style="-fx-background-color: white; -fx-background-radius: 100; -fx-border-color: black; -fx-border-radius: 100;" text="Start Game" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
             <font>
                <Font name="Franklin Gothic Medium" size="25.0" />
             </font>
          </Button>
-         <ImageView fx:id="keyboard" fitHeight="150.0" fitWidth="200.0"  pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+         <ImageView fx:id="keyboard" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
             <image>
                <Image url="@instructions.png" />
             </image>
