--- a/src/main/resources/banking/banking.fxml
+++ b/src/main/resources/banking/banking.fxml
@@ -4,10 +4,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.banking.bankingcontroller">
    <children>
-      <Label layoutX="216.0" layoutY="47.0" prefHeight="44.0" prefWidth="168.0" text="Your current funds: 50$">
+      <Label fx:id="fundslabel" layoutX="216.0" layoutY="47.0" prefHeight="44.0" prefWidth="168.0" text="Your current funds: 50$">
          <font>
             <Font size="15.0" />
          </font>
