--- a/src/main/resources/introduction/registerScene.fxml
+++ b/src/main/resources/introduction/registerScene.fxml
@@ -10,14 +10,14 @@
 <AnchorPane minHeight="720" minWidth="1280" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-image: url(introduction/background.jpg); -fx-background-repeat: no-repeat; -fx-background-size: cover; -fx-background-position: center;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.introduction.controllers.RegistrationController">
 
 
-    <GridPane alignment="CENTER" focusTraversable="true" hgap="10" layoutX="124.4000015258789" style="-fx-alignment: center;" vgap="10" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
+    <GridPane alignment="CENTER" focusTraversable="true" hgap="10" layoutX="124.4000015258789" scaleX="1.5" scaleY="1.5" scaleZ="1.5" style="-fx-alignment: center;" vgap="10" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
 
 
         <padding>
             <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
         </padding>
 
-        <Label alignment="CENTER" contentDisplay="CENTER" style="-fx-alignment: center;" text="Create Your Account!" textAlignment="CENTER" textFill="WHITE" translateY="-80.0" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER">
+        <Label alignment="CENTER" contentDisplay="CENTER" style="-fx-alignment: center;" text="Create Your Account!" textAlignment="CENTER" textFill="WHITE" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER">
           <font>
               <Font name="Franklin Gothic Medium" size="50.0" />
           </font>
