SB-26 Adaugat legaturile dintre butoanele, friends.jason si legatura cu userservices

--- a/src/main/resources/banking/banking.fxml
+++ b/src/main/resources/banking/banking.fxml
@@ -13,7 +13,7 @@
       </Label>
       <Button layoutX="248.0" layoutY="124.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="118.0" text="Transfer funds" />
       <Button layoutX="285.0" layoutY="174.0" mnemonicParsing="false" text="Shop" />
-      <Button layoutX="270.0" layoutY="220.0" mnemonicParsing="false" text="Add friend" />
+      <Button layoutX="270.0" layoutY="220.0" mnemonicParsing="false" onAction="#popupAddFriend" text="Add friend" />
       <Button layoutX="281.0" layoutY="275.0" mnemonicParsing="false" onAction="#switchToMiningScene" text="Minare" />
    </children>
 </AnchorPane>
