--- a/src/main/resources/authentication/registerScene.fxml
+++ b/src/main/resources/authentication/registerScene.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane minHeight="720" minWidth="1280" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-image: url(introduction/background.jpg); -fx-background-repeat: no-repeat; -fx-background-size: cover; -fx-background-position: center;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.introduction.controllers.RegistrationController">
+<AnchorPane minHeight="720" minWidth="1280" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-image: url(authentication/background.jpg); -fx-background-repeat: no-repeat; -fx-background-size: cover; -fx-background-position: center;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.authentication.controllers.RegistrationController">
 
 
     <GridPane alignment="CENTER" focusTraversable="true" hgap="10" layoutX="124.4000015258789" scaleX="1.5" scaleY="1.5" scaleZ="1.5" style="-fx-alignment: center;" vgap="10" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
@@ -158,12 +158,15 @@
          <RowConstraints />
         </rowConstraints>
     </GridPane>
-    <HBox prefHeight="28.0" prefWidth="1920.0" style="-fx-background-color: #666155;">
+    <HBox prefHeight="64.0" prefWidth="1920.0" style="-fx-background-color: #666155;">
         <children>
             <Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeApp" style="-fx-background-color: transparent;" text="❌">
                 <font>
-                    <Font name="Franklin Gothic Medium" size="25.0" />
-                </font></Button>
+                    <Font name="VCR OSD Mono" size="25.0" />
+                </font>
+                <HBox.margin>
+                    <Insets top="10.0" />
+                </HBox.margin></Button>
         </children>
     </HBox>
 </AnchorPane>
