--- a/src/main/resources/banking/friends.fxml
+++ b/src/main/resources/banking/friends.fxml
@@ -1,28 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.banking.addFriendsController">
-    <children>
-        <Label layoutX="99.0" layoutY="85.0" prefHeight="76.0" prefWidth="186.0" text="Username :">
-            <font>
-                <Font size="35.0" />
-            </font></Label>
-        <TextField fx:id="friendUsernameBox" layoutX="285.0" layoutY="98.0" prefHeight="66.0" prefWidth="186.0">
-            <font>
-                <Font size="31.0" />
-            </font>
-        </TextField>
-        <Button layoutX="207.0" layoutY="200.0" mnemonicParsing="false" onAction="#addFriendClick" prefHeight="52.0" prefWidth="161.0" text="Add Friend">
-            <font>
-                <Font size="23.0" />
-            </font></Button>
-        <Label fx:id="infoLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="99.0" layoutY="308.0" prefHeight="45.0" prefWidth="369.0" textAlignment="CENTER">
-            <font>
-                <Font size="30.0" />
-            </font>
-        </Label>
-    </children>
+<AnchorPane prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-image: url(banking/addFriend.jpg); -fx-background-repeat: no-repeat; -fx-background-size: cover; -fx-background-position: center;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.banking.addFriendsController">
+   <GridPane prefHeight="1080.0" prefWidth="1920.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+     <columnConstraints>
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+     </columnConstraints>
+     <rowConstraints>
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints />
+         <RowConstraints />
+     </rowConstraints>
+      <children>
+           <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="76.0" prefWidth="661.0" text="Enter username" textAlignment="CENTER" translateY="200.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.rowSpan="2147483647" GridPane.valignment="TOP">
+               <font>
+                   <Font name="Franklin Gothic Medium" size="35.0" />
+               </font>
+         </Label>
+           <TextField fx:id="friendUsernameBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="2147483647">
+               <font>
+                   <Font size="30.0" />
+               </font>
+           </TextField>
+           <Button mnemonicParsing="false" onAction="#addFriendClick" prefHeight="65.0" prefWidth="235.0" style="-fx-background-color: Transparent; -fx-border-color: #666155; -fx-border-width: 5;" text="Add Friend" translateY="-200.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.rowSpan="2147483647" GridPane.valignment="BOTTOM">
+               <font>
+                   <Font name="Franklin Gothic Medium" size="30.0" />
+               </font>
+         </Button>
+           <Label fx:id="infoLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="45.0" prefWidth="369.0" textAlignment="CENTER" translateY="-280.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.rowSpan="2147483647" GridPane.valignment="BOTTOM">
+               <font>
+                   <Font size="30.0" />
+               </font>
+           </Label>
+          <Button mnemonicParsing="false" onAction="#backToMenuScene" prefHeight="99.0" prefWidth="120.0" style="-fx-background-color: transparent;" textFill="#666155" translateX="-100.0" translateY="50.0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+              <graphic>
+                  <ImageView fitHeight="82.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true" translateX="-10.0">
+                      <Image url="@backIcon.png" />
+                  </ImageView>
+              </graphic>
+          </Button>
+      </children>
+   </GridPane>
+    <HBox prefHeight="64.0" prefWidth="1920.0" style="-fx-background-color: #666155;">
+        <children>
+            <Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeApp" style="-fx-background-color: transparent;" text="❌">
+                <font>
+                    <Font name="VCR OSD Mono" size="25.0" />
+                </font>
+                <HBox.margin>
+                    <Insets top="10.0" />
+                </HBox.margin></Button>
+        </children>
+    </HBox>
 </AnchorPane>
