--- a/src/main/resources/banking/banking.fxml
+++ b/src/main/resources/banking/banking.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-image: url(banking/background1.jpg); -fx-background-repeat: no-repeat; -fx-background-size: cover; -fx-background-position: center;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.banking.bankingcontroller">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-image: url(banking/background1.jpg); -fx-background-repeat: no-repeat; -fx-background-size: cover; -fx-background-position: center;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.banking.controllers.bankingcontroller">
     <GridPane prefHeight="1080.0" prefWidth="1920.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -78,6 +78,67 @@
             <Font name="Franklin Gothic Medium" size="30.0" />
          </font>
       </Label>
+    </GridPane>
+   <GridPane fx:id="hideGrid" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: efece7;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+     <columnConstraints>
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+     </columnConstraints>
+     <rowConstraints>
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+     </rowConstraints>
+   </GridPane>
+    <GridPane fx:id="ShopGrid" prefHeight="720.0" prefWidth="720.0" style="-fx-background-color: #666155; -fx-border-color: black;" visible="false" AnchorPane.bottomAnchor="250.0" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="250.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints />
+         <RowConstraints />
+        </rowConstraints>
+        <children>
+            <ImageView fitHeight="300.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" translateY="-50.0" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                <image>
+                    <Image url="@../shop/shirt3.png" />
+                </image>
+            </ImageView>
+            <ImageView fitHeight="300.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" translateY="-50.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                <image>
+                    <Image url="@../shop/shirt1.png" />
+                </image>
+            </ImageView>
+            <ImageView fitHeight="300.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" translateY="-50.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                <image>
+                    <Image url="@../shop/shirt2.png" />
+                </image>
+            </ImageView>
+            <Button mnemonicParsing="false" onAction="#button1" prefHeight="50.0" prefWidth="98.0" style="-fx-opacity: 0.5; -fx-background-color: black;" text="Buy for&#10;15$" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+            <font>
+               <Font name="Franklin Gothic Medium" size="15.0" />
+            </font></Button>
+            <Button mnemonicParsing="false" onAction="#button2" prefHeight="50.0" prefWidth="98.0" style="-fx-background-color: black; -fx-opacity: 0.5;" text="Buy for&#10;7$" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+            <font>
+               <Font name="Franklin Gothic Medium" size="15.0" />
+            </font></Button>
+            <Button mnemonicParsing="false" onAction="#button3" prefHeight="50.0" prefWidth="98.0" style="-fx-opacity: 0.5; -fx-background-color: black;" text="Buy for&#10;5$" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+            <font>
+               <Font name="Franklin Gothic Medium" size="15.0" />
+            </font></Button>
+            <Button mnemonicParsing="false" onAction="#backToBankingScene" prefHeight="99.0" prefWidth="120.0" style="-fx-background-color: transparent;" textFill="#666155" translateX="-100.0" translateY="10.0" GridPane.halignment="CENTER" GridPane.valignment="TOP">
+                <graphic>
+                    <ImageView fitHeight="82.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true" translateX="-10.0">
+                        <Image url="@../game/backIcon.png" />
+                    </ImageView>
+                </graphic>
+            </Button>
+        </children>
     </GridPane>
     <HBox prefHeight="64.0" prefWidth="1920.0" style="-fx-background-color: #666155;">
         <children>
