--- a/src/main/resources/banking/transfer.fxml
+++ b/src/main/resources/banking/transfer.fxml
@@ -1,25 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.banking.transfercontroller">
-    <children>
-        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="291.0" layoutY="69.0" lineSpacing="2.0" prefHeight="92.0" prefWidth="185.0" text="How much $&#10;you want to transfer:">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: #666155;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.banking.controllers.transfercontroller">
+   <GridPane prefHeight="650.0" prefWidth="650.0" style="-fx-border-image-insets: black; -fx-background-color: efece7;" AnchorPane.bottomAnchor="250.0" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="250.0">
+     <columnConstraints>
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+     </columnConstraints>
+     <rowConstraints>
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+     </rowConstraints>
+   </GridPane>
+
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="975.0" layoutY="409.0" lineSpacing="2.0" prefHeight="92.0" prefWidth="213.0" text="How much money you &#10;mant to transfer?" textAlignment="CENTER">
             <font>
-                <Font size="17.0" />
+                <Font name="Franklin Gothic Medium" size="20.0" />
             </font>
         </Label>
-        <TextField fx:id="transferAmount" layoutX="300.0" layoutY="161.0" prefHeight="32.0" prefWidth="168.0">
+        <TextField fx:id="transferAmount" layoutX="998.0" layoutY="545.0" prefHeight="32.0" prefWidth="168.0" promptText="\$">
             <font>
-                <Font size="18.0" />
+                <Font name="Franklin Gothic Medium" size="18.0" />
             </font>
         </TextField>
-        <ScrollPane layoutX="57.0" layoutY="24.0" prefHeight="350.0" prefWidth="213.0" style="-fx-background-color: #eeeeee;">
+    <Button layoutX="114.0" layoutY="56.0" mnemonicParsing="false" onAction="#backToBankingScene" prefHeight="99.0" prefWidth="120.0" style="-fx-background-color: transparent;" textFill="#666155" translateX="-100.0" translateY="10.0" GridPane.halignment="CENTER" GridPane.valignment="TOP">
+        <graphic>
+            <ImageView fitHeight="82.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true" translateX="-10.0">
+                <Image url="@../game/backIcon.png" />
+            </ImageView>
+        </graphic>
+    </Button>
+        <ScrollPane layoutX="695.0" layoutY="409.0" prefHeight="201.0" prefWidth="213.0" style="-fx-background-color: #eeeeee;">
             <content>
                 <VBox fx:id="vBox" prefHeight="341.0" prefWidth="208.0" style="-fx-background-color: #eeeeee;" />
             </content>
         </ScrollPane>
-    </children>
+
+    <HBox prefHeight="64.0" prefWidth="1920.0" style="-fx-background-color: #666155;">
+        <children>
+            <Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeApp" style="-fx-background-color: transparent;" text="❌">
+                <font>
+                    <Font name="VCR OSD Mono" size="25.0" />
+                </font>
+                <HBox.margin>
+                    <Insets top="10.0" />
+                </HBox.margin></Button>
+        </children>
+    </HBox>
 </AnchorPane>
