--- a/src/main/resources/shop/shop.fxml
+++ b/src/main/resources/shop/shop.fxml
@@ -4,13 +4,39 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.banking.shopcontroller">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #666155;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.loose.fis.banking.controllers.shopcontroller">
    <children>
-      <ImageView fitHeight="150.0" fitWidth="160.0" layoutX="48.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="150.0" fitWidth="160.0" layoutX="235.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="150.0" fitWidth="160.0" layoutX="406.0" layoutY="51.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="82.0" layoutY="254.0" mnemonicParsing="false" onAction="#button1" prefHeight="37.0" prefWidth="98.0" text="15$" />
-      <Button layoutX="267.0" layoutY="254.0" mnemonicParsing="false" onAction="#button2" prefHeight="37.0" prefWidth="98.0" text="7$" />
-      <Button layoutX="438.0" layoutY="254.0" mnemonicParsing="false" onAction="#button3" prefHeight="37.0" prefWidth="98.0" text="5$" />
+      <GridPane prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <ImageView fitHeight="150.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@shirt1.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="150.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+               <image>
+                  <Image url="@shirt2.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="150.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+               <image>
+                  <Image url="@shirt3.png" />
+               </image>
+            </ImageView>
+            <Button mnemonicParsing="false" onAction="#button1" prefHeight="37.0" prefWidth="98.0" text="15$" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button mnemonicParsing="false" onAction="#button2" prefHeight="37.0" prefWidth="98.0" text="7$" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button mnemonicParsing="false" onAction="#button3" prefHeight="37.0" prefWidth="98.0" text="5$" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
